Update image sizing for Firefox

--- a/about/index.html
+++ b/about/index.html
@@ -64,7 +64,7 @@ overview: true
             <ul class="projects-list clearfix">
 
                 <li>
-                    <a href="https://www.shwoodshop.com/us">
+                    <a class="about-image" href="https://www.shwoodshop.com/us">
                         <img src="/img/shwood.png" alt="" />
                         <div class="caption">
                             <div>
@@ -76,7 +76,7 @@ overview: true
                 </li>
 
                 <li>
-                    <a href="https://www.stance.com/">
+                    <a class="about-image" href="https://www.stance.com/">
                         <img src="/img/stance.png" alt="" />
                         <div class="caption">
                             <div>
@@ -88,7 +88,7 @@ overview: true
                 </li>
 
                 <li>
-                    <a href="http://www.google.com/earth/explore/showcase/liquidgalaxy.html">
+                    <a id="about-image" href="http://www.google.com/earth/explore/showcase/liquidgalaxy.html">
                         <img src="/img/lg.jpg" alt="" />
                         <div class="caption">
                             <div>
@@ -100,7 +100,7 @@ overview: true
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a class="engine-image" href="http://www.chopcult.com/default.php">
                         <img src="/img/engine.png" alt="" />
                         <div class="caption">
                             <div>
