Fix Firefox styling

--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@ overview: true
                 <span class="section-subtitle">Nuts & Bolts</a></span>
             </header>
 
-            <p>Professionally I am Rails fan, who dables in Python. My current interests are in more functional programming such as <a href="http://elixir-lang.org/">Elixir</a> and <a href="https://www.haskell.org/">Haskell</a>. Lately I've been abandoning Rails Active Record queries in favor of creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a>. I enjoy learning about system adminstration and writting tests for my code, although I often find clients don't want to pay for it. Outside of coding I wrench old motorcycles (pre-1982), mostly British stuff but I like old Yamaha dirtbikes as well.</p>
+            <p>Professionally I am Rails fan, who dabbles in Python. My current interests are in more functional programming such as <a href="http://elixir-lang.org/">Elixir</a> and <a href="https://www.haskell.org/">Haskell</a>. Lately I've been abandoning Rails Active Record queries in favor of creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a>. I enjoy learning about system adminstration and writting tests for my code, although I often find clients don't want to pay for it. Outside of coding I wrench old motorcycles (pre-1982), mostly British stuff but I like old Yamaha dirtbikes as well.</p>
 
         </section>
 
@@ -29,23 +29,23 @@ overview: true
             <div class="one-half first">
 
                 <h4>Ruby on Rails</h4>
-                <p>Whether adding new functionality, debugging, testing, or making updates, if it's anyting to do with RoR I can help.</p>
+                <p>Whether adding new functionality, debugging, testing, or making updates, if it's anything to do with RoR I can help.</p>
 
-                <h4>JavaScript, especially Angular</h4>
-                <p>JavaScript is fun and I enjoy slinging data around.</p>
+                <h4>JavaScript</h4>
+                <p>JavaScript is fun and I enjoy slinging data around. Well versed in Angular, Backbone, Knockout, D3, some Node.</p>
 
-                <h4>E-Commerce</h4>
-                <p>I worked on Wall Street as a derivatives trader for 5 years. I have spent a significant time applying my business acumen to e-commerce sites.</p>
+                <h4>SQL</h4>
+                <p>PostgreSQL and MySQL. I appreciate good architecture. Lately I've been experimenting with PostgreSQL's recursive querying.</p>
 
             </div>
 
             <div class="one-half last">
 
-                <h4>Project Managemnet and Estimation</h4>
-                <p>Projects can get out of hand quickly, I like to help keep things running smoothly like a well-oiled machine.</p>
+                <h4>Project Management and Estimation</h4>
+                <p>Projects can get out of hand quickly, I like to be part of a team and to keep things on track. Estimating is always challenging, but I do a lot of it.</p>
 
-                <h4>Knowledge Sharing</h4>
-                <p>The best thing about this business is constant learning.</p>
+                <h4>E-Commerce</h4>
+                <p>I worked on Wall Street as a derivatives trader for 5 years. I have spent significant time applying my business acumen to e-commerce sites.</p>
 
                 <h4>Client Representation and Consultation</h4>
                 <p>Getting to learn about an industry or how a business works is another great benefit to software development. Over the years I have been in constant contact with CEOs and business owners, their success is mine and I love helping to make their passions profitable.</p>
@@ -64,19 +64,19 @@ overview: true
             <ul class="projects-list clearfix">
 
                 <li>
-                    <a class="about-image" href="https://www.shwoodshop.com/us">
+                    <a href="https://www.shwoodshop.com/us">
                         <img src="/img/shwood.png" alt="" />
                         <div class="caption">
                             <div>
                                 <h4>Shwood</h4>
-                                <span>Ruby, Rails, Spree, Wombat, AWS</span>
+                                <span>Ruby on Rails, Spree, Wombat, AWS</span>
                             </div>
                         </div>
                     </a>
                 </li>
 
                 <li>
-                    <a class="about-image" href="https://www.stance.com/">
+                    <a href="https://www.stance.com/">
                         <img src="/img/stance.png" alt="" />
                         <div class="caption">
                             <div>
@@ -88,19 +88,19 @@ overview: true
                 </li>
 
                 <li>
-                    <a id="about-image" href="http://www.google.com/earth/explore/showcase/liquidgalaxy.html">
+                    <a href="http://www.google.com/earth/explore/showcase/liquidgalaxy.html">
                         <img src="/img/lg.jpg" alt="" />
                         <div class="caption">
                             <div>
                                 <h4>Google</h4>
-                                <span>Python, Arduino, Rails, Angular</span>
+                                <span>Python, Rails, Angular</span>
                             </div>
                         </div>
                     </a>
                 </li>
 
                 <li>
-                    <a class="engine-image" href="http://www.chopcult.com/default.php">
+                    <a href="http://www.chopcult.com/default.php">
                         <img src="/img/engine.png" alt="" />
                         <div class="caption">
                             <div>
