--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@ overview: true
                 <span class="section-subtitle">Nuts & Bolts</a></span>
             </header>
 
-            <p>Professionally I am Rails fan, who dabbles in Python. My current interests are in more functional programming such as <a href="http://elixir-lang.org/">Elixir</a> and <a href="https://www.haskell.org/">Haskell</a>. Lately I've been abandoning Rails Active Record queries in favor of creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a>. I enjoy learning about system adminstration and writting tests for my code, although I often find clients don't want to pay for it. Outside of coding I wrench old motorcycles (pre-1982), mostly British stuff but I like old Yamaha dirtbikes as well.</p>
+            <p>Professionally I am Rails fan who dabbles in Python. My current interests are in more functional programming such as <a href="http://elixir-lang.org/">Elixir</a> and <a href="https://www.haskell.org/">Haskell</a>. Lately I've been abandoning Rails Active Record queries in favor of creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a>. I enjoy learning about system adminstration and writting tests for my code, although I often find clients don't want to pay for it. Outside of coding I wrench old motorcycles (pre-1982), mostly British stuff but I like old Yamaha dirtbikes as well.</p>
 
         </section>
 
@@ -35,17 +35,17 @@ overview: true
                 <p>JavaScript is fun and I enjoy slinging data around. Well versed in Angular, Backbone, Knockout, D3, some Node.</p>
 
                 <h4>SQL</h4>
-                <p>PostgreSQL and MySQL. I appreciate good architecture. Lately I've been experimenting with PostgreSQL's recursive querying.</p>
+                <p>PostgreSQL and MySQL, I appreciate good architecture. Lately I've been experimenting with PostgreSQL's recursive querying.</p>
 
             </div>
 
             <div class="one-half last">
 
                 <h4>Project Management and Estimation</h4>
-                <p>Projects can get out of hand quickly, I like to be part of a team and to keep things on track. Estimating is always challenging, but I do a lot of it.</p>
+                <p>I like keeping things organized. Estimating is inherently challenging in software, I think I'm improving everyday.</p>
 
                 <h4>E-Commerce</h4>
-                <p>I worked on Wall Street as a derivatives trader for 5 years. I have spent significant time applying my business acumen to e-commerce sites.</p>
+                <p>I worked on Wall Street for 5 years, now I work extensively on e-commerce sites.</p>
 
                 <h4>Client Representation and Consultation</h4>
                 <p>Getting to learn about an industry or how a business works is another great benefit to software development. Over the years I have been in constant contact with CEOs and business owners, their success is mine and I love helping to make their passions profitable.</p>
