--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@ overview: true
                 <a href="/img/matthewgalvinresume.pdf">Resume</a>
             </header>
 
-            <p>Professionally I am a Rails fan who dabbles in Python. My current interests are in more functional programming such as <a href="http://elixir-lang.org/">Elixir</a> and <a href="https://www.haskell.org/">Haskell</a>. Lately I've been abandoning Rails Active Record queries in favor of creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a>. I enjoy learning about system adminstration and thrilled when my unit tests are passing. Outside of coding I wrench old motorcycles (pre-1982), mostly British stuff but I like old Yamaha dirtbikes as well.</p>
+            <p>Professionally I am a Rails fan who dabbles in Python. My current interests are in more functional programming such as <a href="http://elixir-lang.org/">Elixir</a> and <a href="https://www.haskell.org/">Haskell</a>. Lately I've been abandoning Rails Active Record queries in favor of creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a>. I enjoy learning about system adminstration and I love when my tests catch something I didn't. Outside of coding I wrench old motorcycles (pre-1982), mostly British stuff but I like old Yamaha dirtbikes as well.</p>
 
         </section>
 
@@ -32,7 +32,7 @@ overview: true
                 <p>Whether adding new functionality, debugging, testing, or making updates, if it's anything to do with RoR I can help.</p>
 
                 <h4>JavaScript</h4>
-                <p>JavaScript is fun and I enjoy slinging data around. Well versed in Angular, Backbone, Knockout, D3, some Node.</p>
+                <p>JavaScript is fun and I enjoy slinging data around. Well versed in Angular, Vue,Backbone, Knockout, D3, some Node.</p>
 
                 <h4>SQL</h4>
                 <p>PostgreSQL and MySQL, I appreciate good architecture. Lately I've been experimenting with PostgreSQL's recursive querying.</p>
