--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,9 @@ overview: true
                 <a href="/img/matthewgalvinresume.pdf">Resume</a>
             </header>
 
-            <p>Professionally I am a Rails fan who dabbles in Python. My current interests are in more functional programming such as <a href="http://elixir-lang.org/">Elixir</a> and <a href="https://www.haskell.org/">Haskell</a>. Lately I've been abandoning Rails Active Record queries in favor of creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a>. I enjoy learning about system adminstration and I love when my tests catch something I didn't. Outside of coding I wrench old motorcycles (pre-1982), mostly British stuff but I like old Yamaha dirtbikes as well.</p>
+            <p>I am a Rails developer (5 years of full-stack Rails development) who studies blockchain technology on the weekends. I have been a Wall Street options trader (silver and gold), an English teacher, and a motorcycle mechanic.
+           </p>
+           <p>Lately I've been enjoying creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a> and experimenting to make them as efficient as possible, especially over ActiveRecord. I was really in to <a href="https://www.arduino.cc/">Arduino</a> for a while, <a href="https://docs.google.com/presentation/d/1pNaa5F_CRKQZoLLTRxBM6zquq7ihvgUNmuA7Ba3Cw4A/edit?usp=sharing">here</a> are some slides of a presentation I gave and some information on a project I did for a perfume company, <a href="https://www.youtube.com/watch?time_continue=5&v=hkZftpLGA8M">here</a> is the prototype in action. Of course I also need to step away from the computer from time to time... outside of coding I do motorcycle stunts on my <a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a> and my <a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>.</p>
 
         </section>
 
@@ -45,7 +47,7 @@ overview: true
                 <p>I like keeping things organized. Estimating is inherently challenging in software, I think I'm improving everyday.</p>
 
                 <h4>E-Commerce</h4>
-                <p>I worked on Wall Street for 5 years, now I work extensively on e-commerce sites.</p>
+                <p>I worked on Wall Street for 5 years, I enjoy business and applying that experience to web application development.</p>
 
                 <h4>Client Representation and Consultation</h4>
                 <p>Getting to learn about an industry or how a business works is another great benefit to software development. Over the years I have been in constant contact with CEOs and business owners, their success is mine and I love helping to make their passions profitable.</p>
