--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,9 @@ overview: true
                 <a href="/img/matthewgalvinresume.pdf">Resume</a>
             </header>
 
-            <p>I am a Rails developer with 5 years of full-stack Rails development experience. I study blockchain technology as a hobby and I'm enrolled at the Polish-Japanese Institute of Technology's Computer Science (Bachelor of Engineering) part-time program. I have been a Wall Street options trader (silver and gold), an English teacher, and a motorcycle mechanic. Lately I've been enjoying creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a> and experimenting to make them as efficient as possible, especially over ActiveRecord queries.
+            <p>I am a Rails developer with 7 years of full-stack Rails
+            development experience. I study blockchain technology as a hobby and
+            have taken courses at the Polish-Japanese Institute of Technology's Computer Science (Bachelor of Engineering) part-time program. I have been a Wall Street options trader (silver and gold), an English teacher, and a motorcycle mechanic. Lately I've been enjoying creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a> and experimenting to make them as efficient as possible, especially over ActiveRecord queries.
            </p>
            <p>Of course I also need to step away from the computer from time to time... outside of coding I do motorcycle stunts on my <a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a> and my <a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>.</p>
 
