--- a/about/index.html
+++ b/about/index.html
@@ -15,9 +15,10 @@ overview: true
                 <a href="/img/matthewgalvinresume.pdf">Resume</a>
             </header>
 
-            <p>I am a Rails developer with 7 years of full-stack Rails
-            development experience. I study blockchain technology as a hobby and
-            have taken courses at the Polish-Japanese Institute of Technology's Computer Science (Bachelor of Engineering) part-time program. I have been a Wall Street options trader (silver and gold), an English teacher, and a motorcycle mechanic. Lately I've been enjoying creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a> and experimenting to make them as efficient as possible, especially over ActiveRecord queries.
+            <p>I have been a remote full-stack developer for over 7 years. I specialize in Rails but love Elixir as well, am adept with JavaScript and a large variety of JS frameworks including
+						React, Ember, Angular. I actually enjoy writting tests and love pair programming. I have worked for a number of high profile clients such as Netflix, Google and Harvard. I understand
+						the importance of reliability and shipping well-written and well-tested code quickly.
+            I have been a Wall Street options trader (silver and gold), an English teacher, and a motorcycle mechanic. Lately I've been enjoying creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a> and experimenting to make them as efficient as possible, especially over ActiveRecord queries.
            </p>
            <p>Of course I also need to step away from the computer from time to time... outside of coding I do motorcycle stunts on my <a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a> and my <a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>.</p>
 
