Update resume, /about

--- a/about/index.html
+++ b/about/index.html
@@ -15,12 +15,21 @@ overview: true
                 <a href="/img/matthewgalvinresume.pdf">Resume</a>
             </header>
 
-            <p>I have been a remote full-stack developer for over 7 years. I specialize in Rails but love Elixir as well, am adept with JavaScript and a large variety of JS frameworks including
-						React, Ember, Angular. I actually enjoy writting tests and love pair programming. I have worked for a number of high profile clients such as Netflix, Google and Harvard. I understand
-						the importance of reliability and shipping well-written and well-tested code quickly.
-            I have been a Wall Street options trader (silver and gold), an English teacher, and a motorcycle mechanic. Lately I've been enjoying creating PostgreSQL <a href="http://www.postgresql.org/docs/9.4/static/sql-createview.html">views</a> and experimenting to make them as efficient as possible, especially over ActiveRecord queries.
+            <p>I have been a remote full-stack developer for over 7 years. I
+            specialize in Elixir and Ruby, Phoenix and Rails. I enjoy doing test
+            driven development, learning new tricks with PostgreSQL,  and I love pair programming. I have worked for a number of high profile clients such as Netflix, Google and Harvard.
+            I have been a Wall Street options trader (silver and gold), an
+            English teacher, and a motorcycle mechanic. Lately I've been reading
+            <a
+              href="https://pragprog.com/titles/lmelixir/testing-elixir">Testing
+              Elixir</a>
+            and practing speed reading techniques.
            </p>
-           <p>Of course I also need to step away from the computer from time to time... outside of coding I do motorcycle stunts on my <a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a> and my <a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>.</p>
+           <p>Of course I also need to step away from the computer from time to time... outside of coding I do motorcycle stunts on my <a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>
+           and my <a
+           href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>.
+           I also repair and restore vintage Japanese minitrucks like the Nissan
+           D21 Hardbody and Gen 1 Toyota Tacomas.</p>
 
         </section>
 
@@ -33,27 +42,38 @@ overview: true
 
             <div class="one-half first">
 
-                <h4>Ruby on Rails</h4>
-                <p>Whether adding new functionality, debugging, testing, or making updates, if it's anything to do with RoR I can help.</p>
+                <h4>Elixir, Phoenix</h4>
+                <p>When I interviewed for DockYard, Chris McCord (author of the
+                Phoenix framework) was one of the people who interviewed me.
+                Over the couple years that I worked there, collaborating with
+                the great Elxir team there, I gained exposure to
+                Elixir/Phoenix. While Ruby/Rails is like an old friend,
+                Elixir/Phoenix is now my preference.</p>
 
-                <h4>JavaScript</h4>
-                <p>JavaScript is fun and I enjoy slinging data around. Well versed in Angular, Vue,Backbone, Knockout, D3, some Node.</p>
+                <h4>Test Driven Development</h4>
+                <p>I am a big proponent of TDD and I have fun doing it.</p>
 
                 <h4>SQL</h4>
-                <p>PostgreSQL and MySQL, I appreciate good architecture. Lately I've been experimenting with PostgreSQL's recursive querying.</p>
+                <p>PostgreSQL, I appreciate good database design and have fun leveraging
+                powerful SQL features that would be laborious/inferior to replicate in
+                ORMs.</p>
 
             </div>
 
             <div class="one-half last">
 
-                <h4>Project Management and Estimation</h4>
-                <p>I like keeping things organized. Estimating is inherently challenging in software, I think I'm improving everyday.</p>
+                <h4>Ruby, Ruby on Rails</h4>
+                <p>Whether adding new functionality, debugging, testing, or making updates, if it's anything to do with RoR I can help.</p>
 
                 <h4>E-Commerce</h4>
                 <p>I worked on Wall Street for 5 years, I enjoy business and applying that experience to web application development.</p>
 
-                <h4>Client Representation and Consultation</h4>
-                <p>Getting to learn about an industry or how a business works is another great benefit to software development. Over the years I have been in constant contact with CEOs and business owners, their success is mine and I love helping to make their passions profitable.</p>
+                <h4>Remote development</h4>
+                <p>While lots of companies have recently moved to remote work
+                environments given the realities of COVID, I've been doing
+                remote development for almost a decade and have lots of
+                experience and knowledge about how to perform and communicate
+                effectively while remote.</p>
 
             </div>
 
@@ -115,6 +135,19 @@ overview: true
                         </div>
                     </a>
                 </li>
+                <li>
+                    <a href="http://www.infamousnissan.com">
+                        <img src="/img/123.jpg" alt="" />
+                        <div class="caption">
+                            <div>
+                                <h4>1993 Nissan Hardbody</h4>
+                                <span>Done a lot of work to get it to this point
+                                :)</span>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+ 
             </ul>
 
         </section>
