--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,11 @@ overview: true
             </header>
 
             <p>I have been a remote full-stack developer for over 7 years. I
-            specialize in Elixir and Ruby, Phoenix and Rails. I enjoy doing test
+            specialize in Elixir and Ruby, Phoenix and Rails. I'm an open-source
+            contributor and author of Harvard University's <a
+              href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
+              CorpusBuilder Ruby
+              Client Gem</a>. I enjoy doing test
             driven development, learning new tricks with PostgreSQL,  and I love pair programming. I have worked for a number of high profile clients such as Netflix, Google and Harvard.
             I have been a Wall Street options trader (silver and gold), an
             English teacher, and a motorcycle mechanic. Lately I've been reading
