Update resume, about

--- a/about/index.html
+++ b/about/index.html
@@ -15,13 +15,17 @@ overview: true
                 <a href="/img/matthewgalvinresume.pdf">Resume</a>
             </header>
 
-            <p>I have been a remote full-stack developer for over 7 years. I
-            specialize in Elixir and Ruby, Phoenix and Rails. I'm an open-source
+            <p>I have been a remote full-stack developer for 9 years. I
+            specialize in Elixir, Erlang, and Ruby on Rails. I'm an open-source
             contributor and author of Harvard University's <a
               href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
               CorpusBuilder Ruby
-              Client Gem</a>. I enjoy doing test
-            driven development, learning new tricks with PostgreSQL,  and I love pair programming. I have worked for a number of high profile clients such as Netflix, Google and Harvard.
+              Client Gem</a>. I've also contributed to <a
+              href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
+            and Hex packages like <a
+                                    href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a> and <a
+              href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>. I enjoy doing test
+            driven development, learning new tricks with PostgreSQL, and I love pair programming. I have worked for a number of high profile clients such as Netflix, Google and Harvard.
             I have been a Wall Street options trader (silver and gold), an
             English teacher, and a motorcycle mechanic. Lately I've been reading
             <a
@@ -46,13 +50,13 @@ overview: true
 
             <div class="one-half first">
 
-                <h4>Elixir, Phoenix</h4>
+                <h4>Elixir, Erlang</h4>
                 <p>When I interviewed for DockYard, Chris McCord (author of the
                 Phoenix framework) was one of the people who interviewed me.
                 Over the couple years that I worked there, collaborating with
                 the great Elxir team there, I gained exposure to
                 Elixir/Phoenix. While Ruby/Rails is like an old friend,
-                Elixir/Phoenix is now my preference.</p>
+                Elixir and/or Erlang is what I prefer.</p>
 
                 <h4>Test Driven Development</h4>
                 <p>I am a big proponent of TDD and I have fun doing it.</p>
