--- a/about/index.html
+++ b/about/index.html
@@ -15,8 +15,9 @@ overview: true
                 <a href="/img/matthewgalvinresume.pdf">Resume</a>
             </header>
 
-            <p>I have been a remote full-stack developer for 9 years. I
-            specialize in Elixir, Erlang, and Ruby on Rails. I'm an open-source
+            <p>I have been a remote full-stack developer for 10 years. I
+            specialize in Elixir and Erlang. I'm currently a graduate Student in
+            Drexel University's MS of Computer Science program. I'm an open-source
             contributor and author of Harvard University's <a
               href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
               CorpusBuilder Ruby
@@ -54,9 +55,16 @@ overview: true
                 <p>When I interviewed for DockYard, Chris McCord (author of the
                 Phoenix framework) was one of the people who interviewed me.
                 Over the couple years that I worked there, collaborating with
-                the great Elxir team there, I gained exposure to
-                Elixir/Phoenix. While Ruby/Rails is like an old friend,
-                Elixir and/or Erlang is what I prefer.</p>
+                the great Elxir team, I gained exposure to
+                Elixir/Phoenix.
+                This experience was improved upon but later working
+                at Virtual Power Systems where I wrote Erlang and Elixir and developed a prototype of a Nerves
+                device which subsequently sold 5,000 units as a test run for some data centers
+                in the Western US. That project is still under active development and may change
+                the face of data centers as we know it.
+                I currently work at Erlang Soltions with industry greats such as Francesco Cesarini, Robert
+                Virding, and a number of other very talented Elixir and Erlang developers.
+                </p>
 
                 <h4>Test Driven Development</h4>
                 <p>I am a big proponent of TDD and I have fun doing it.</p>
