master Update resume

--- a/about/index.html
+++ b/about/index.html
@@ -15,8 +15,8 @@ overview: true
                 <a href="/img/matthewgalvinresume.pdf">Resume</a>
             </header>
 
-            <p>I have been a remote full-stack developer for 10 years. I
-            specialize in Elixir and Erlang. I'm currently a graduate Student in
+            <p>I am a remote developer with 10 years of experience in software,
+            specializing in Elixir and Erlang. I'm also pursuing a graduate degree in
             Drexel University's MS of Computer Science program. I'm an open-source
             contributor and author of Harvard University's <a
               href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
@@ -57,12 +57,16 @@ overview: true
                 Over the couple years that I worked there, collaborating with
                 the great Elxir team, I gained exposure to
                 Elixir/Phoenix.
-                This experience was improved upon but later working
+                </p>
+                <p>
+                This experience was improved upon later working
                 at Virtual Power Systems where I wrote Erlang and Elixir and developed a prototype of a Nerves
-                device which subsequently sold 5,000 units as a test run for some data centers
-                in the Western US. That project is still under active development and may change
+                device which subsequently sold 5,000 units. The device is in use in data centers
+                in the Western US, and that project is still under active development and may change
                 the face of data centers as we know it.
-                I currently work at Erlang Soltions with industry greats such as Francesco Cesarini, Robert
+                </p>
+                <p>
+                Currently, I work at Erlang Solutions with industry greats such as Francesco Cesarini, Robert
                 Virding, and a number of other very talented Elixir and Erlang developers.
                 </p>
 
