master Update about, resume

--- a/about/index.html
+++ b/about/index.html
@@ -17,16 +17,16 @@ overview: true
 
             <p>I am a remote developer with 10 years of experience in software,
             specializing in Elixir and Erlang. I'm also pursuing a graduate degree in
-            Drexel University's MS of Computer Science program. I'm an open-source
+            Drexel University's MS of Computer Science program. An open-source
             contributor and author of Harvard University's <a
               href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
               CorpusBuilder Ruby
-              Client Gem</a>. I've also contributed to <a
+              Client Gem</a>, I've also contributed to <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
             and Hex packages like <a
                                     href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a> and <a
-              href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>. I enjoy doing test
-            driven development, learning new tricks with PostgreSQL, and I love pair programming. I have worked for a number of high profile clients such as Netflix, Google and Harvard.
+              href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>. I have worked for a
+            number of high profile clients such as Netflix, Google and Harvard.
             I have been a Wall Street options trader (silver and gold), an
             English teacher, and a motorcycle mechanic. Lately I've been reading
             <a
@@ -82,8 +82,14 @@ overview: true
 
             <div class="one-half last">
 
-                <h4>Ruby, Ruby on Rails</h4>
-                <p>Whether adding new functionality, debugging, testing, or making updates, if it's anything to do with RoR I can help.</p>
+                <h4>Embedded Elixir/Erlang</h4>
+ <p>I invented a Raspberry Pi device, powered by Nerves, which solves an industry-wide
+ issue in data centers. Essentially, the most widely used communication protocols are
+ insecure and outdated (Modbus TCP, IPMI, most SNMP versions, etc.).
+ The device I invented allows intelligent control of power in data centers while
+ maintaining security as a priority and still supports the use of common but insecure
+ protocols. So far over 5,000 units of the prototype have 
+ sold.</p>
 
                 <h4>E-Commerce</h4>
                 <p>I worked on Wall Street for 5 years, I enjoy business and applying that experience to web application development.</p>
