--- a/about/index.html
+++ b/about/index.html
@@ -16,8 +16,10 @@ overview: true
             </header>
 
             <p>I am a remote developer with 10 years of experience in software,
-            specializing in Elixir and Erlang. I'm also pursuing a graduate degree in
-            Drexel University's MS of Computer Science program. An open-source
+            specializing in Elixir and Erlang. I'm also pursuing my Master of Science
+            degree at Drexel University's MS of Computer Science program.
+            </p>
+            <p> I'm An open-source
             contributor and author of Harvard University's <a
               href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
               CorpusBuilder Ruby
@@ -25,15 +27,24 @@ overview: true
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
             and Hex packages like <a
                                     href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a> and <a
-              href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>. I have worked for a
+                                    href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>. I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
+                                    libraries out there </a>! I have worked for a
             number of high profile clients such as Netflix, Google and Harvard.
-            I have been a Wall Street options trader (silver and gold), an
+            Formerly a Wall Street options trader (silver and gold), an
             English teacher, and a motorcycle mechanic. Lately I've been reading
             <a
               href="https://pragprog.com/titles/lmelixir/testing-elixir">Testing
               Elixir</a>
             and practing speed reading techniques.
            </p>
+           <p>I invented a Raspberry Pi device, powered by Nerves, which solves an industry-wide
+           issue in data centers. Essentially, the most widely used communication protocols are
+           insecure and outdated (Modbus TCP, IPMI, most SNMP versions, etc.). 
+           The device I invented allows intelligent control of power in data centers while
+           maintaining security as a priority and still supporting the use of the common but
+           insecure protocols. So far over 5,000 units of the prototype have sold.
+           </p>
+
            <p>Of course I also need to step away from the computer from time to time... outside of coding I do motorcycle stunts on my <a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>
            and my <a
            href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>.
@@ -73,23 +84,19 @@ overview: true
                 <h4>Test Driven Development</h4>
                 <p>I am a big proponent of TDD and I have fun doing it.</p>
 
-                <h4>SQL</h4>
-                <p>PostgreSQL, I appreciate good database design and have fun leveraging
-                powerful SQL features that would be laborious/inferior to replicate in
-                ORMs.</p>
+                <h4>Hipster Operating Systems</h4>
+                <p>I like <a href="https://9p.io/plan9/">Plan9</a>. How about using a Raspberry Pi as a work
+                machine? If you do that, you will want to encrypt your SD card, see how to do that with my 
+                gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>
+                How about 3D printing a tiny retro Macintosh computer (see image below)</p>
+                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Made a 3D printed, retro Tiny Mac. Perfect for fun with <a href="https://twitter.com/hashtag/elixir?src=hash&amp;ref_src=twsrc%5Etfw">#elixir</a> 1.14, <a href="https://twitter.com/hashtag/erlang?src=hash&amp;ref_src=twsrc%5Etfw">#erlang</a> OTP 25- who needs an M1 when you have Raspberry Pi Zeros!<br><br>Found the plans / stl files here: <a href="https://t.co/FHWoKi57oQ">https://t.co/FHWoKi57oQ</a> <a href="https://t.co/28euLUieMY">pic.twitter.com/28euLUieMY</a></p>&mdash; Galvatron (@mattjg908) <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
             </div>
 
             <div class="one-half last">
 
                 <h4>Embedded Elixir/Erlang</h4>
- <p>I invented a Raspberry Pi device, powered by Nerves, which solves an industry-wide
- issue in data centers. Essentially, the most widely used communication protocols are
- insecure and outdated (Modbus TCP, IPMI, most SNMP versions, etc.).
- The device I invented allows intelligent control of power in data centers while
- maintaining security as a priority and still supports the use of common but insecure
- protocols. So far over 5,000 units of the prototype have 
- sold.</p>
+                <p>Nerves, GRiSP, etc.</p>
 
                 <h4>E-Commerce</h4>
                 <p>I worked on Wall Street for 5 years, I enjoy business and applying that experience to web application development.</p>
