--- a/about/index.html
+++ b/about/index.html
@@ -16,10 +16,10 @@ overview: true
             </header>
 
             <p>I am a remote developer with 10 years of experience in software,
-            specializing in Elixir and Erlang. I'm also pursuing my Master of Science
-            degree at Drexel University's MS of Computer Science program.
+            specializing in Elixir and Erlang. I'm also a stuent in
+            Drexel University's MS of Computer Science program.
             </p>
-            <p> I'm An open-source
+            <p> I'm an open-source
             contributor and author of Harvard University's <a
               href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
               CorpusBuilder Ruby
@@ -84,12 +84,12 @@ overview: true
                 <h4>Test Driven Development</h4>
                 <p>I am a big proponent of TDD and I have fun doing it.</p>
 
-                <h4>Hipster Operating Systems</h4>
-                <p>I like <a href="https://9p.io/plan9/">Plan9</a>. How about using a Raspberry Pi as a work
-                machine? If you do that, you will want to encrypt your SD card, see how to do that with my 
-                gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>
-                How about 3D printing a tiny retro Macintosh computer (see image below)</p>
-                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Made a 3D printed, retro Tiny Mac. Perfect for fun with <a href="https://twitter.com/hashtag/elixir?src=hash&amp;ref_src=twsrc%5Etfw">#elixir</a> 1.14, <a href="https://twitter.com/hashtag/erlang?src=hash&amp;ref_src=twsrc%5Etfw">#erlang</a> OTP 25- who needs an M1 when you have Raspberry Pi Zeros!<br><br>Found the plans / stl files here: <a href="https://t.co/FHWoKi57oQ">https://t.co/FHWoKi57oQ</a> <a href="https://t.co/28euLUieMY">pic.twitter.com/28euLUieMY</a></p>&mdash; Galvatron (@mattjg908) <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <h4>Remote development</h4>
+                <p>While lots of companies have recently moved to remote work
+                environments given the realities of COVID, I've been doing
+                remote development for almost a decade and have lots of
+                experience and knowledge about how to perform and communicate
+                effectively while remote.</p>
 
             </div>
 
@@ -101,12 +101,12 @@ overview: true
                 <h4>E-Commerce</h4>
                 <p>I worked on Wall Street for 5 years, I enjoy business and applying that experience to web application development.</p>
 
-                <h4>Remote development</h4>
-                <p>While lots of companies have recently moved to remote work
-                environments given the realities of COVID, I've been doing
-                remote development for almost a decade and have lots of
-                experience and knowledge about how to perform and communicate
-                effectively while remote.</p>
+                <h4>Hipster Operating Systems</h4>
+                <p>I like <a href="https://9p.io/plan9/">Plan9</a>. How about using a Raspberry Pi as a work
+                machine? If you do that, you will want to encrypt your SD card, see how to do that with my 
+                gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>
+                How about 3D printing a tiny retro Macintosh computer (see image below)</p>
+                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Made a 3D printed, retro Tiny Mac. Perfect for fun with <a href="https://twitter.com/hashtag/elixir?src=hash&amp;ref_src=twsrc%5Etfw">#elixir</a> 1.14, <a href="https://twitter.com/hashtag/erlang?src=hash&amp;ref_src=twsrc%5Etfw">#erlang</a> OTP 25- who needs an M1 when you have Raspberry Pi Zeros!<br><br>Found the plans / stl files here: <a href="https://t.co/FHWoKi57oQ">https://t.co/FHWoKi57oQ</a> <a href="https://t.co/28euLUieMY">pic.twitter.com/28euLUieMY</a></p>&mdash; Galvatron (@mattjg908) <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
             </div>
 
