--- a/about/index.html
+++ b/about/index.html
@@ -62,6 +62,9 @@ overview: true
 
             <div class="one-half first">
 
+                <h4>Embedded Elixir/Erlang</h4>
+                <p>Nerves, GRiSP, etc.</p>
+
                 <h4>Elixir, Erlang</h4>
                 <p>When I interviewed for DockYard, Chris McCord (author of the
                 Phoenix framework) was one of the people who interviewed me.
@@ -70,36 +73,18 @@ overview: true
                 Elixir/Phoenix.
                 </p>
                 <p>
-                This experience was improved upon later working
-                at Virtual Power Systems where I wrote Erlang and Elixir and developed a prototype of a Nerves
-                device which subsequently sold 5,000 units. The device is in use in data centers
-                in the Western US, and that project is still under active development and may change
-                the face of data centers as we know it.
+                Later at Virtual Power Systems I gained experience with embedded systems, which
+                is actually what Erlang was originally designed for.
                 </p>
                 <p>
                 Currently, I work at Erlang Solutions with industry greats such as Francesco Cesarini, Robert
                 Virding, and a number of other very talented Elixir and Erlang developers.
                 </p>
 
-                <h4>Test Driven Development</h4>
-                <p>I am a big proponent of TDD and I have fun doing it.</p>
-
-                <h4>Remote development</h4>
-                <p>While lots of companies have recently moved to remote work
-                environments given the realities of COVID, I've been doing
-                remote development for almost a decade and have lots of
-                experience and knowledge about how to perform and communicate
-                effectively while remote.</p>
 
             </div>
 
             <div class="one-half last">
-
-                <h4>Embedded Elixir/Erlang</h4>
-                <p>Nerves, GRiSP, etc.</p>
-
-                <h4>E-Commerce</h4>
-                <p>I worked on Wall Street for 5 years, I enjoy business and applying that experience to web application development.</p>
 
                 <h4>Hipster Operating Systems</h4>
                 <p>I like <a href="https://9p.io/plan9/">Plan9</a>. How about using a Raspberry Pi as a work
