master Update about

--- a/about/index.html
+++ b/about/index.html
@@ -15,34 +15,23 @@ overview: true
                 <a href="/img/matthewgalvinresume.pdf">Resume</a>
             </header>
 
-            <p>I am a remote developer with 10 years of experience in software,
-            specializing in Elixir and Erlang. I'm also a stuent in
-            Drexel University's MS of Computer Science program.
+            <p>I'm a graduate student (MS of Computer Science at Drexel University),
+            with 10 years of software engineering experience working as an Elixir/Erlang developer.
             </p>
-            <p> I'm an open-source
-            contributor and author of Harvard University's <a
+            <p>I'm an open-source
+            contributor, author of Harvard University's <a
               href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
               CorpusBuilder Ruby
-              Client Gem</a>, I've also contributed to <a
+              Client Gem</a>, contributed to <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
-            and Hex packages like <a
-                                    href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a> and <a
+            Hex packages like <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a> and <a
                                     href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>. I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
-                                    libraries out there </a>! I have worked for a
+                                    libraries out there</a>! I have worked for a
             number of high profile clients such as Netflix, Google and Harvard.
             Formerly a Wall Street options trader (silver and gold), an
-            English teacher, and a motorcycle mechanic. Lately I've been reading
-            <a
-              href="https://pragprog.com/titles/lmelixir/testing-elixir">Testing
-              Elixir</a>
-            and practing speed reading techniques.
-           </p>
-           <p>I invented a Raspberry Pi device, powered by Nerves, which solves an industry-wide
-           issue in data centers. Essentially, the most widely used communication protocols are
-           insecure and outdated (Modbus TCP, IPMI, most SNMP versions, etc.). 
-           The device I invented allows intelligent control of power in data centers while
-           maintaining security as a priority and still supporting the use of the common but
-           insecure protocols. So far over 5,000 units of the prototype have sold.
+            English teacher, and a motorcycle mechanic. I'm also an inventor. I invented a Raspberry Pi device, powered
+            by Nerves, which solves an industry-wide issue in data centers. So far over 5,000
+            units of the prototype have sold.
            </p>
 
            <p>Of course I also need to step away from the computer from time to time... outside of coding I do motorcycle stunts on my <a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>
