--- a/about/index.html
+++ b/about/index.html
@@ -79,7 +79,7 @@ overview: true
                 <p>I like <a href="https://9p.io/plan9/">Plan9</a>. How about using a Raspberry Pi as a work
                 machine? If you do that, you will want to encrypt your SD card, see how to do that with my 
                 Gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>.
-                How about 3D printing a tiny retro Macintosh computer (see my Tweet below) to see the one I made.</p>
+                How about 3D printing a tiny retro Macintosh computer, see my Tweet below to see the one I made.</p>
                 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Made a 3D printed, retro Tiny Mac. Perfect for fun with <a href="https://twitter.com/hashtag/elixir?src=hash&amp;ref_src=twsrc%5Etfw">#elixir</a> 1.14, <a href="https://twitter.com/hashtag/erlang?src=hash&amp;ref_src=twsrc%5Etfw">#erlang</a> OTP 25- who needs an M1 when you have Raspberry Pi Zeros!<br><br>Found the plans / stl files here: <a href="https://t.co/FHWoKi57oQ">https://t.co/FHWoKi57oQ</a> <a href="https://t.co/28euLUieMY">pic.twitter.com/28euLUieMY</a></p>&mdash; Galvatron (@mattjg908) <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
             </div>
