--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,9 @@ overview: true
             </header>
 
             <p>I'm a graduate student (MS of Computer Science at Drexel University),
-            with 10 years of software engineering experience working as an Elixir/Erlang developer.
+            with 10 years of software engineering experience. I enjoy all BEAM languages,
+            currently my day job is Elixir, my passion is Erlang, and my I like to mess around
+            with the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>.
             </p>
             <p>I'm an open-source
             contributor, author of Harvard University's <a
@@ -76,7 +78,7 @@ overview: true
             <div class="one-half last">
 
                 <h4>Hipster Operating Systems</h4>
-                <p>I like <a href="https://9p.io/plan9/">Plan9</a>. How about using a Raspberry Pi as a work
+                <p>I like <a href="https://9p.io/plan9/">Plan 9</a>. How about using a Raspberry Pi as a work
                 machine? If you do that, you will want to encrypt your SD card, see how to do that with my 
                 Gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>.
                 How about 3D printing a tiny retro Macintosh computer, see my Tweet below to see the one I made.</p>
