--- a/about/index.html
+++ b/about/index.html
@@ -24,9 +24,9 @@ overview: true
             contributor, author of Harvard University's <a
               href="https://github.com/berkmancenter/corpusbuilder-ruby-client/blob/master/corpusbuilder-ruby.gemspec#L9">
               CorpusBuilder Ruby
-              Client Gem</a>, contributed to <a
+              Client Gem</a>, with contributions to <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
-            Hex packages like <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a> and <a
+            Hex packages like <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a>, and <a
                                     href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>. I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
                                     libraries out there</a>! I have worked for a
             number of high profile clients such as Netflix, Google and Harvard.
