--- a/about/index.html
+++ b/about/index.html
@@ -28,10 +28,13 @@ overview: true
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
             Hex packages like <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a>, and <a
                                     href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>. I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
-                                    libraries out there</a>! I have worked for a
-            number of high profile clients such as Netflix, Google and Harvard.
-            Formerly a Wall Street options trader (silver and gold), an
-            English teacher, and a motorcycle mechanic. I'm also an inventor. I invented a Raspberry Pi device, powered
+                                    libraries out there</a>!
+            </p>
+            <p>I have worked for a number of high profile clients such as Netflix, Google and
+            Harvard. Formerly a Wall Street options trader (silver and gold), an English teacher,
+            and a motorcycle mechanic.
+            </p>
+            <p>I'm also an inventor. I invented a Raspberry Pi device, powered
             by Nerves, which solves an industry-wide issue in data centers. So far over 5,000
             units of the prototype have sold.
            </p>
