--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@ overview: true
            and my <a
            href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>.
            I also repair and restore vintage Japanese minitrucks like the Nissan
-           D21 Hardbody and Gen 1 Toyota Tacomas.</p>
+           D21 Hardbody.</p>
 
         </section>
 
