--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@ overview: true
               CorpusBuilder Ruby
               Client Gem</a>, with contributions to <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
-            Hex packages like <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a>, and <a
+            Hex packages like <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a>, and to <a
                                     href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>. I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
                                     libraries out there</a>!
             </p>
