--- a/about/index.html
+++ b/about/index.html
@@ -28,9 +28,7 @@ overview: true
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
             Hex packages like <a href="https://github.com/jeanparpaillon/elixir-snmp/pull/21">snmp-elixir</a>, and to <a
                                     href="https://github.com/nerves-project/nerves_examples/pull/222">Nerves</a>. I even have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
-                                    libraries out there</a>!
-            </p>
-            <p>I have worked for a number of high profile clients such as Netflix, Google and
+                                    libraries out there</a>! I have worked for a number of high profile clients such as Netflix, Google and
             Harvard. Formerly a Wall Street options trader (silver and gold), an English teacher,
             and a motorcycle mechanic.
             </p>
