--- a/about/index.html
+++ b/about/index.html
@@ -16,9 +16,9 @@ overview: true
             </header>
 
             <p>I'm a graduate student (MS of Computer Science at Drexel University),
-            with 10 years of software engineering experience. I enjoy all BEAM languages,
+            with 10 years of software engineering experience. I enjoy all <a href="https://en.wikipedia.org/wiki/BEAM_(Erlang_virtual_machine)">BEAM</a> languages,
             currently my day job is Elixir, my passion is Erlang, and my hobby
-            is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>.
+            (not BEAM related) is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>.
             </p>
             <p>I'm an open-source
             contributor, author of Harvard University's <a
