--- a/about/index.html
+++ b/about/index.html
@@ -37,11 +37,10 @@ overview: true
             units of the prototype have sold.
            </p>
 
-           <p>Of course I also need to step away from the computer from time to time... outside of coding I do motorcycle stunts on my <a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>
-           and my <a
-           href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>.
-           I also repair and restore vintage Japanese minitrucks like the Nissan
-           D21 Hardbody.</p>
+<p>Of course I need to step away from the computer from time to time... outside
+of coding I do motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
+<a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>)
+and spin wrenches on the best vehicles ever made, the 1986.5 - 1997 Nissan D21 Hardbody.</p>
 
         </section>
 
