--- a/about/index.html
+++ b/about/index.html
@@ -53,25 +53,23 @@ and spin wrenches on the best vehicles ever made, the 1986.5 - 1997 Nissan D21 H
 
             <div class="one-half first">
 
-                <h4>Embedded Elixir/Erlang</h4>
+                <h4>Embedded Software</h4>
                 <p>Nerves, GRiSP, etc.</p>
 
-                <h4>Elixir, Erlang</h4>
+                <h4>Elixir</h4>
                 <p>When I interviewed for DockYard, Chris McCord (author of the
                 Phoenix framework) was one of the people who interviewed me.
                 Over the couple years that I worked there, collaborating with
                 the great Elxir team, I gained exposure to
                 Elixir/Phoenix.
                 </p>
+
+                <h4>Erlang</h4>
                 <p>
                 Later at Virtual Power Systems I gained experience with embedded systems, which
-                is actually what Erlang was originally designed for.
-                </p>
-                <p>
-                Currently, I work at Erlang Solutions with industry greats such as Francesco Cesarini, Robert
+                is actually what Erlang was originally designed for. Currently, I work at Erlang Solutions with industry greats such as Francesco Cesarini, Robert
                 Virding, and a number of other very talented Elixir and Erlang developers.
                 </p>
-
 
             </div>
 
@@ -80,10 +78,12 @@ and spin wrenches on the best vehicles ever made, the 1986.5 - 1997 Nissan D21 H
                 <h4>Hipster Operating Systems</h4>
                 <p>I like <a href="https://9p.io/plan9/">Plan 9</a>. How about using a Raspberry Pi as a work
                 machine? If you do that, you will want to encrypt your SD card, see how to do that with my 
-                Gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>.
-                How about 3D printing a tiny retro Macintosh computer, see my Tweet below to see the one I made.</p>
-                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Made a 3D printed, retro Tiny Mac. Perfect for fun with <a href="https://twitter.com/hashtag/elixir?src=hash&amp;ref_src=twsrc%5Etfw">#elixir</a> 1.14, <a href="https://twitter.com/hashtag/erlang?src=hash&amp;ref_src=twsrc%5Etfw">#erlang</a> OTP 25- who needs an M1 when you have Raspberry Pi Zeros!<br><br>Found the plans / stl files here: <a href="https://t.co/FHWoKi57oQ">https://t.co/FHWoKi57oQ</a> <a href="https://t.co/28euLUieMY">pic.twitter.com/28euLUieMY</a></p>&mdash; Galvatron (@mattjg908) <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                Gist <a href="https://gist.github.com/mattjg908/9f56b7ace55cf923a93482df66369115">here</a>. I
+                use <a href="https://archlinux.org/">Arch</a>, btw...
 
+                <h4>Gadgetry</h4>
+                <p>Here's my 3D printed Tiny retro Macintosh computer.</p>
+                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Made a 3D printed, retro Tiny Mac. Perfect for fun with <a href="https://twitter.com/hashtag/elixir?src=hash&amp;ref_src=twsrc%5Etfw">#elixir</a> 1.14, <a href="https://twitter.com/hashtag/erlang?src=hash&amp;ref_src=twsrc%5Etfw">#erlang</a> OTP 25- who needs an M1 when you have Raspberry Pi Zeros!<br><br>Found the plans / stl files here: <a href="https://t.co/FHWoKi57oQ">https://t.co/FHWoKi57oQ</a> <a href="https://t.co/28euLUieMY">pic.twitter.com/28euLUieMY</a></p>&mdash; Galvatron (@mattjg908) <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
 
         </section>
