--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,7 @@ and spin wrenches on the best vehicles ever made, the 1986.5 - 1997 Nissan D21 H
                 use <a href="https://archlinux.org/">Arch</a>, btw...
 
                 <h4>Prototyping</h4>
-                <p>Here's my 3D printed Tiny retro Macintosh computer.</p>
+                <p>Here's my 3D printed Tiny Retro Macintosh computer.</p>
                 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Made a 3D printed, retro Tiny Mac. Perfect for fun with <a href="https://twitter.com/hashtag/elixir?src=hash&amp;ref_src=twsrc%5Etfw">#elixir</a> 1.14, <a href="https://twitter.com/hashtag/erlang?src=hash&amp;ref_src=twsrc%5Etfw">#erlang</a> OTP 25- who needs an M1 when you have Raspberry Pi Zeros!<br><br>Found the plans / stl files here: <a href="https://t.co/FHWoKi57oQ">https://t.co/FHWoKi57oQ</a> <a href="https://t.co/28euLUieMY">pic.twitter.com/28euLUieMY</a></p>&mdash; Galvatron (@mattjg908) <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
 
