--- a/about/index.html
+++ b/about/index.html
@@ -53,21 +53,22 @@ and spin wrenches on the best vehicles ever made, the 1986.5 - 1997 Nissan D21 H
 
             <div class="one-half first">
 
-                <h4>Embedded Software</h4>
-                <p>Nerves, GRiSP, etc.</p>
-
                 <h4>Elixir</h4>
                 <p>When I interviewed for DockYard, Chris McCord (author of the
                 Phoenix framework) was one of the people who interviewed me.
                 Over the couple years that I worked there, collaborating with
-                the great Elxir team, I gained exposure to
-                Elixir/Phoenix.
+                the great Elxir team, I gained exposure to Elixir/Phoenix.
+                </p>
+
+                <h4>Embedded Software</h4>
+                <p>Nerves, GRiSP, etc. At Virtual Power Systems (Cato Digital) I,
+                gained experience with embedded systems, which is what Erlang was 
+                originally designed for. 
                 </p>
 
                 <h4>Erlang</h4>
                 <p>
-                Later at Virtual Power Systems I gained experience with embedded systems, which
-                is actually what Erlang was originally designed for. Currently, I work at Erlang Solutions with industry greats such as Francesco Cesarini, Robert
+                Currently, I work at Erlang Solutions with industry greats such as Francesco Cesarini, Robert
                 Virding, and a number of other very talented Elixir and Erlang developers.
                 </p>
 
