--- a/about/index.html
+++ b/about/index.html
@@ -60,8 +60,8 @@ and spin wrenches on the best vehicles ever made, the 1986.5 - 1997 Nissan D21 H
                 the great Elxir team, I gained exposure to Elixir/Phoenix.
                 </p>
 
-                <h4>Embedded Software</h4>
-                <p>Nerves, GRiSP, etc. At Virtual Power Systems (Cato Digital) I,
+                <h4>Embedded Software (Nerves, GRiSP)</h4>
+                <p>At Virtual Power Systems (Cato Digital) I,
                 gained experience with embedded systems, which is what Erlang was 
                 originally designed for. 
                 </p>
