--- a/about/index.html
+++ b/about/index.html
@@ -61,7 +61,7 @@ and spin wrenches on the best vehicles ever made, the 1986.5 - 1997 Nissan D21 H
                 </p>
 
                 <h4>Embedded Software (Nerves, GRiSP)</h4>
-                <p>At Virtual Power Systems (Cato Digital) I
+                <p>At Cato Digital (Virtual Power Systems) I
                 gained experience with embedded systems, which is what Erlang was 
                 originally designed for. 
                 </p>
